WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199996
[GTK] Emoji chooser is misplaced after scrolling
https://bugs.webkit.org/show_bug.cgi?id=199996
Summary
[GTK] Emoji chooser is misplaced after scrolling
Alice Mikhaylenko
Reported
2019-07-22 01:04:38 PDT
Created
attachment 374590
[details]
Emoji chooser for "Your name (optional)" field Looks like the emoji chooser assumes the scrolling position is always 0,0 when opening. If you scroll the page a bit and try to insert an emoji, it will be positioned incorrectly, and possibly even outside the window/screen. See screenshot
Attachments
Emoji chooser for "Your name (optional)" field
(93.81 KB, image/png)
2019-07-22 01:04 PDT
,
Alice Mikhaylenko
no flags
Details
Patch
(1.47 KB, patch)
2019-07-22 03:20 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-highsierra
(3.08 MB, application/zip)
2019-07-22 05:07 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-07-22 03:20:06 PDT
Created
attachment 374592
[details]
Patch
EWS Watchlist
Comment 2
2019-07-22 05:07:02 PDT
Comment hidden (spam)
Comment on
attachment 374592
[details]
Patch
Attachment 374592
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12787169
New failing tests: webgl/2.0.0/conformance/context/context-release-upon-reload.html
EWS Watchlist
Comment 3
2019-07-22 05:07:04 PDT
Comment hidden (spam)
Created
attachment 374594
[details]
Archive of layout-test-results from ews116 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-highsierra Platform: Mac OS X 10.13.6
Carlos Garcia Campos
Comment 4
2019-07-23 00:11:48 PDT
Committed
r247719
: <
https://trac.webkit.org/changeset/247719
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug