[GTK] Emoji chooser is misplaced after scrolling https://bugs.webkit.org/show_bug.cgi?id=199996

Reviewed by Michael Catanzaro.

Convert caret rectangle coordinates to root view.

* WebProcess/WebPage/gtk/WebPageGtk.cpp:
(WebKit::WebPage::showEmojiPicker):

Canonical link: https://commits.webkit.org/213878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247719 268f45cc-cd09-0410-ab3c-d52691b4dbfc