Source/WebKit/WebProcess/WebPage/gtk/WebPageGtk.cpp
@@ -200,7 +200,7 @@ void WebPage::showEmojiPicker(Frame& frame)
         if (!result.isEmpty())
             frame->editor().insertText(result, nullptr);
     };
-    sendWithAsyncReply(Messages::WebPageProxy::ShowEmojiPicker(frame.selection().absoluteCaretBounds()), WTFMove(completionHandler));
+    sendWithAsyncReply(Messages::WebPageProxy::ShowEmojiPicker(frame.view()->contentsToRootView(frame.selection().absoluteCaretBounds())), WTFMove(completionHandler));
 }
 
 void WebPage::effectiveAppearanceDidChange(bool useDarkAppearance, bool useInactiveAppearance)
